<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textView2"
        style="@style/TextViewStyle"
        android:layout_marginTop="40dp"
        android:text="@string/by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewStyle"
        android:layout_marginTop="21dp"
        android:text="@string/developer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <!-- Social Media Links -->
    <TextView
        android:id="@+id/tvGmail"
        style="@style/LinkTextViewStyle"
        android:layout_marginTop="40dp"
        android:text="@string/contact_via_gmail"
        android:drawableStart="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvGitHub"
        style="@style/LinkTextViewStyle"
        android:layout_marginTop="16dp"
        android:text="@string/github_profile"
        android:drawableStart="@drawable/ic_github"
        app:layout_constraintTop_toBottomOf="@id/tvGmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLinkedIn"
        style="@style/LinkTextViewStyle"
        android:layout_marginTop="16dp"
        android:text="@string/linkedin_profile"
        android:drawableStart="@drawable/ic_linkedin"
        app:layout_constraintTop_toBottomOf="@id/tvGitHub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fell_free_if_you_have_any_suggestions_or_found_any_bugs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLinkedIn" />

</androidx.constraintlayout.widget.ConstraintLayout>