<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/viEt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:text="19.6"
        app:layout_constraintBottom_toBottomOf="@+id/viTv"
        app:layout_constraintEnd_toStartOf="@+id/viCheck"
        app:layout_constraintTop_toTopOf="@+id/viTv" />

    <EditText
        android:id="@+id/h0Et"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:text="20.00"
        app:layout_constraintBottom_toBottomOf="@+id/h0Tv"
        app:layout_constraintEnd_toStartOf="@+id/viCheck"
        app:layout_constraintTop_toTopOf="@+id/h0Tv" />

    <EditText
        android:id="@+id/vfEt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:text="19.6"
        app:layout_constraintBottom_toBottomOf="@+id/vfTv"
        app:layout_constraintEnd_toStartOf="@+id/vfCheck"
        app:layout_constraintTop_toTopOf="@+id/vfTv" />

    <EditText
        android:id="@+id/maxHeightEt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:text="19.6"
        app:layout_constraintBottom_toBottomOf="@+id/maxHeightCheck"
        app:layout_constraintEnd_toStartOf="@+id/vfCheck"
        app:layout_constraintTop_toTopOf="@+id/maxHeightCheck"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/endTimeEt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="numberDecimal"
        android:text="6.73"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeCheck"
        app:layout_constraintEnd_toStartOf="@+id/endTimeCheck"
        app:layout_constraintTop_toTopOf="@+id/endTimeCheck"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/start_simulation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/gravitySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="9.8"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="10"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/gravitySwitch"
        app:layout_constraintTop_toTopOf="@+id/gravitySwitch" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="G  ="
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/gravitySwitch"
        app:layout_constraintTop_toTopOf="@+id/gravitySwitch" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:tintMode="src_in"
        app:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pressedTranslationZ="8dp"
        app:srcCompat="@drawable/arrow_back"
        />

    <TextView
        android:id="@+id/viTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/initial_velocity"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/viCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viCheck" />

    <TextView
        android:id="@+id/h0Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_height"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/h0Check"
        app:layout_constraintStart_toStartOf="@+id/viTv"
        app:layout_constraintTop_toTopOf="@+id/h0Check" />

    <TextView
        android:id="@+id/vfTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_velocity"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/vfCheck"
        app:layout_constraintStart_toStartOf="@+id/h0Tv"
        app:layout_constraintTop_toTopOf="@+id/vfCheck" />

    <TextView
        android:id="@+id/maxHeightTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_height"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/maxHeightCheck"
        app:layout_constraintStart_toStartOf="@+id/vfTv"
        app:layout_constraintTop_toTopOf="@+id/maxHeightCheck" />

    <TextView
        android:id="@+id/endTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeCheck"
        app:layout_constraintStart_toStartOf="@+id/vfTv"
        app:layout_constraintTop_toTopOf="@+id/endTimeCheck" />

    <CheckBox
        android:id="@+id/viCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <CheckBox
        android:id="@+id/h0Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/viCheck"
        app:layout_constraintTop_toBottomOf="@+id/viCheck" />

    <CheckBox
        android:id="@+id/vfCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/viCheck"
        app:layout_constraintTop_toBottomOf="@+id/h0Check" />

    <CheckBox
        android:id="@+id/maxHeightCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/viCheck"
        app:layout_constraintTop_toBottomOf="@+id/vfCheck" />

    <CheckBox
        android:id="@+id/endTimeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/viCheck"
        app:layout_constraintTop_toBottomOf="@+id/maxHeightCheck" />

    <TextView
        android:id="@+id/errorTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gravitySwitch"
        tools:text="@string/you_should_set_only_two_variables" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="-"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/vfEt"
        app:layout_constraintEnd_toStartOf="@+id/vfEt"
        app:layout_constraintTop_toTopOf="@+id/vfEt" />

    <TextView
        android:id="@+id/minusViTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="-"
        android:textSize="34sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/viEt"
        app:layout_constraintEnd_toStartOf="@+id/viEt"
        app:layout_constraintTop_toTopOf="@+id/viEt"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>